# sdm-framework

./: .coveragerc  .dockerignore  .flake8  .gitignore  CNAME  Dockerfile  MANIFEST.in  README.md  autogen.sh  configure.ac  docs-requirements.txt  sdm.py  setup.py  tests.py  tox.ini
docs/: Makefile  c-api.rst  conf.py  index.rst  make.bat  sdm.rst
docs/notebooks/: Autocorrelation - Math.ipynb  Autocorrelation - Test  2 - Heteroassociative (random at x).ipynb  Autocorrelation - Test 1 - Autoassociative (x at x).ipynb  Calculate critical distance.ipynb  Calculate radius for any SDM.ipynb  Chuncking through XOR.ipynb  Classification Test 1.ipynb  Classification Test 2.ipynb  Critical Distance - New.ipynb  Critical Distance.ipynb  Distance between bitstrings.ipynb  Distances of activated hard-locations.ipynb  Generates a new SDM.ipynb  TicTacToe.ipynb  (+26 more)
lib/: Makefile  base64.cpp  sha256.cpp
notebooks/: Distance between bitstrings.ipynb  Generates a new SDM.ipynb  Kanerva's Figure 1.2.ipynb  Kanerva-Table-7.3.ipynb
paper/: Makefile  paper.tex
sdm/: __init__.py  scanner_opencl.cl  scanner_opencl2.cl  utils.py
src/: Makefile  Makefile.am  address.h  address_space.c  address_space.cpp  address_space.h  bitstring.c  bitstring.cpp  bitstring.h  counter.c  counter.cpp  counter.h  file_counter.h  operations.c  operations.h  protocol.cpp  scanner.cpp  scanner.h  scanner_opencl.c  scanner_opencl.cl  scanner_opencl.cpp  scanner_opencl.h  scanner_opencl2.c  scanner_opencl2.cl  scanner_thread.c  scanner_thread.cpp  scanner_thread.h  scanner_thread2.c  sdm.h  server.cpp  server.h  test1.c  test2.c  test3.c  test4.c  test_address_space.cpp  test_bitstring.cpp  test_counter.cpp  test_linear.c  test_linear2.c  (+11 more)
src/lib/: Makefile  base64.c  base64.h  sha256.h
src/test/: test_bitstring.c
