
check_PROGRAMS = test_bitstring test_address_space test_scanner test_scanner_thread

test_bitstring_SOURCES = \
	test_bitstring.cpp \
	bitstring.cpp \
	lib/base64.cpp

test_address_space_SOURCES = \
	test_address_space.cpp \
	bitstring.cpp \
	address_space.cpp \
	lib/base64.cpp \
	lib/sha256.cpp

test_scanner_SOURCES = \
	test_scanner.cpp \
	scanner.cpp \
	bitstring.cpp \
	address_space.cpp \
	lib/base64.cpp \
	lib/sha256.cpp

test_scanner_thread_SOURCES = \
	test_scanner_thread.cpp \
	scanner_thread.cpp \
	scanner.cpp \
	bitstring.cpp \
	address_space.cpp \
	lib/base64.cpp \
	lib/sha256.cpp

